algorithm mid test